--- a/graphql/package.json
+++ b/graphql/package.json
@@ -2,7 +2,7 @@
   "name": "gql-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node .",
